fixed some word wrap issues for max content and some links to various places:

--- a/react-app/src/components/bookings/bookings.css
+++ b/react-app/src/components/bookings/bookings.css
@@ -9,7 +9,7 @@
     padding: 25px;
     border-radius: 25px;
     width: 300px;
-    height: 550px;
+    height: 450px;
 }
 
 #bookings-dates-selection {
