--- a/react-app/src/components/homePage/home-page.css
+++ b/react-app/src/components/homePage/home-page.css
@@ -22,6 +22,7 @@
     flex-direction: column;
     gap: 7px;
     text-decoration: none;
+    width: 237px;
 }
 
 #single-home-property-image {
@@ -42,6 +43,8 @@
     color: grey;
     font-size: 12px;
     font-weight: 600;
+    word-wrap: break-word;
+    width: 100%;
 }
 
 #single-home-property-cost {
