--- a/react-app/src/components/profile/profile.css
+++ b/react-app/src/components/profile/profile.css
@@ -35,6 +35,7 @@
     font-weight: 600;
     width: 100%;
     padding-bottom: 10px;
+    word-wrap: break-word;
 }
 
 #profile-page-location {
@@ -42,6 +43,7 @@
     border-bottom: 1px solid lightgray;
     width: 100%;
     font-weight: 600;
+    word-wrap: break-word;
 }
 
 #profile-page-bio {
@@ -65,6 +67,7 @@
 
 #profile-reviews-header {
     text-decoration: underline;
+    word-wrap: break-word;
 }
 
 #profile-links-container {
