--- a/react-app/src/components/properties/NewProperty/new-property.css
+++ b/react-app/src/components/properties/NewProperty/new-property.css
@@ -25,6 +25,7 @@
     color: rgb(227, 28, 95);
     font-weight: 600;
     font-size: 25px;
+    text-align: center;
 }
 
 #property-new-form{
